Contrast fixes

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -11,7 +11,7 @@ body.theme-dark {
 
   --interactive-accent: rgb(var(--mono-rgb-100));
   --interactive-accent-hover: rgba(var(--mono-rgb-100), 0.8);
-  --text-normal: var(--color-base-80);
+  --text-normal: var(--color-base-90);
   --text-on-accent: var(--color-base-00);
   --divider-color-hover: var(--color-base-50);
 
